tests/error/function_ret_ref_prim.gw
// [contains] cannot declare/instantiate references (@) of primitive type
 function int@ test(){}
